crates/carina-tui/tests/snapshots/golden_frames__semantic_palette_depth_none.snap
---
source: crates/carina-tui/tests/golden_frames.rs
expression: "render_palette(Theme::new(Polarity::Dark, level))"
---
size=64x8
CARINA  primary  dim  muted  bright
focus  selected  link
+ added  - removed
fn semantic_theme() {}
pending  success  error
H1 H2 H3 H4 H5 H6


styles:
(17, 0)..(20, 0) (Reset, Reset, DIM)
(22, 0)..(27, 0) (Reset, Reset, DIM)
(29, 0)..(35, 0) (Reset, Reset, DIM)
(0, 1)..(5, 1) (Reset, Reset, BOLD)
(7, 1)..(15, 1) (Reset, Reset, BOLD | REVERSED)
(17, 1)..(21, 1) (Reset, Reset, UNDERLINED)
(0, 5)..(12, 5) (Reset, Reset, BOLD)
(12, 5)..(18, 5) (Reset, Reset, ITALIC)
