crates/carina-tui/tests/snapshots/golden_frames__status_context_warning.snap
---
source: crates/carina-tui/tests/golden_frames.rs
expression: "render_status(\"running\", Some(\"checking context\"), 0, Some(&warning_context))"
---
size=120x2
⠦ checking context 4s  Esc pause safely
1m02 · context 85%
styles:
(0, 0)..(39, 0) (Rgb(142, 219, 210), Reset, NONE)
(0, 1)..(4, 1) (Rgb(142, 219, 210), Reset, NONE)
(4, 1)..(7, 1) (Rgb(150, 160, 156), Reset, NONE)
(7, 1)..(18, 1) (Rgb(232, 168, 95), Reset, NONE)
