crates/carina-tui/tests/snapshots/golden_frames__status_idle.snap
---
source: crates/carina-tui/tests/golden_frames.rs
expression: "render_status(\"ready\", None, 0, None)"
---
size=120x1
ready  ·  minimal
styles:
(0, 0)..(17, 0) (Rgb(150, 160, 156), Reset, NONE)
