crates/carina-tui/tests/snapshots/golden_frames__status_queued_follow_up.snap
---
source: crates/carina-tui/tests/golden_frames.rs
expression: "render_status(\"running\", Some(\"editing src/lib.rs\"), 2, None)"
---
size=120x1
⠧ editing src/l…  1m02        · Esc pause safely · +2 queued   ·  minimal
styles:
(0, 0)..(73, 0) (Rgb(150, 160, 156), Reset, NONE)
