crates/carina-tui/tests/snapshots/golden_frames__status_running.snap
---
source: crates/carina-tui/tests/golden_frames.rs
expression: "render_status(\"running\", Some(\"running tests\"), 0, None)"
---
size=120x1
⠧ running tests   1m02        · Esc pause safely
styles:
(0, 0)..(61, 0) (Rgb(150, 160, 156), Reset, NONE)
