crates/carina-tui/tests/snapshots/golden_frames__status_waiting_approval.snap
---
source: crates/carina-tui/tests/golden_frames.rs
expression: "render_status(\"waiting_approval\", None, 0, None)"
---
size=120x2

run waiting for approval
styles:
(0, 1)..(24, 1) (Rgb(232, 168, 95), Reset, NONE)
