crates/carina-tui/tests/snapshots/golden_frames__vt100_snapshot_captures_terminal_escape_semantics.snap
---
source: crates/carina-tui/tests/golden_frames.rs
expression: parser.screen().contents()
---
CARINA
done
working
